--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,30 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Initial loader that shows before Angular loads
+  <div class="initial-loader" id="initialLoader">
+    <div>
+      <div class="initial-spinner"></div>
+      <div class="initial-text">Loading...</div>
+    </div>
+  </div> -->
+  
   <app-root></app-root>
+  
+  <!-- <script>
+    // Hide the initial loader when Angular app is ready
+    window.addEventListener('load', function() {
+      setTimeout(function() {
+        const loader = document.getElementById('initialLoader');
+        if (loader) {
+          loader.style.opacity = '0';
+          loader.style.transition = 'opacity 0.5s ease';
+          setTimeout(function() {
+            loader.style.display = 'none';
+          }, 500);
+        }
+      }, 500); // Small delay to ensure everything is properly loaded
+    });
+  </script> -->
 </body>
 </html>
