feat: added meta tags for index.html

--- a/src/index.html
+++ b/src/index.html
@@ -5,33 +5,21 @@
   <title>MissclickNet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="MissclickNet - A personal website showcasing my projects, hobbies, and skills.">
+  <meta name="keywords" content='Gabriel "Missclick" GARRONE, personal website, projects, about me, hobbies, skills'>
+  <meta name="author" content='Gabriel "Missclick" GARRONE'>
+  
+  <meta property="og:title" content="MissclickNet">
+  <meta property="og:description" content="MissclickNet - A personal website showcasing my projects, hobbies, and skills.">
+  <meta property="og:image" content="assets/images/icons/favicon.png">
+  <meta property="og:url" content="https://missclick.net">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="MissclickNet">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="assets/images/icons/favicon.png">
 </head>
 <body>
-  <!-- Initial loader that shows before Angular loads
-  <div class="initial-loader" id="initialLoader">
-    <div>
-      <div class="initial-spinner"></div>
-      <div class="initial-text">Loading...</div>
-    </div>
-  </div> -->
-  
   <app-root></app-root>
-  
-  <!-- <script>
-    // Hide the initial loader when Angular app is ready
-    window.addEventListener('load', function() {
-      setTimeout(function() {
-        const loader = document.getElementById('initialLoader');
-        if (loader) {
-          loader.style.opacity = '0';
-          loader.style.transition = 'opacity 0.5s ease';
-          setTimeout(function() {
-            loader.style.display = 'none';
-          }, 500);
-        }
-      }, 500); // Small delay to ensure everything is properly loaded
-    });
-  </script> -->
 </body>
 </html>
