feat: added logo and some styles in header

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   
   <meta property="og:title" content="MissclickNet">
   <meta property="og:description" content="MissclickNet - A personal website showcasing my projects, hobbies, and skills.">
-  <meta property="og:image" content="assets/images/icons/favicon.png">
+  <meta property="og:image" content="assets/images/logo/M.png">
   <meta property="og:url" content="https://missclick.net">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="MissclickNet">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/logo/M.png">
   <link rel="shortcut icon" href="assets/images/icons/favicon.png">
 </head>
 <body>
